@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+23-Mar-2005
+~~~~~~~~~~~
+Option in list view to show the full MIME-Type comment rather than
+just "File" (Stephen Watson).
+
 12-Mar-2005
 ~~~~~~~~~~~
 When building the SendTo menu, allow nested subdirectories more than one
